--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -13,6 +13,10 @@ on:
     branches:
       - main
 
+# Set permissions for GITHUB_TOKEN
+permissions:
+  contents: write
+
 jobs:
   generate:
     runs-on: ubuntu-latest
