--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -3,7 +3,7 @@ name: Generate Snake Animation
 on:
   # Run automatically every 24 hours
   schedule:
-    - cron: "0 */24 * * *"
+    - cron: "0 0 * * *"
   
   # Allows manual trigger from the Actions tab
   workflow_dispatch:
@@ -13,7 +13,6 @@ on:
     branches:
       - main
 
-# Set permissions for GITHUB_TOKEN
 permissions:
   contents: write
 
@@ -23,26 +22,23 @@ jobs:
     timeout-minutes: 10
     
     steps:
-      # Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
       
-      # Generate the snake animation
       - name: Generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_owner }}
+          github_user_name: Maleshkumarvelmurugan1982
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-      # Push the generated files to the output branch
-      - name: Push snake animations to output branch
-        uses: crazy-max/ghaction-github-pages@v3.1.0
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
         with:
-          target_branch: output
-          build_dir: dist
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./dist
+          publish_branch: output
+          force_orphan: true
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
